# Editor

./: README.md
engine-editor/: CMakeLists.txt  buildGameEngine.sh  main.cpp
engine-editor/qtui/: Editor.cpp  Editor.h  Editor.ui  Editor.ui.autosave
engine-editor/res/models/default/: Monkey.fbx  Plane.fbx  Sphere.fbx  cube.fbx  monkey.blend
engine-editor/res/shaders/basicShader/: basicShader.fs  basicShader.vs
engine-editor/widgets/: GameGLView.cpp  GameGLView.h  ListDialog.cpp  ListDialog.h  ProgramGLView.cpp  ProgramGLView.h  SceneGLView.cpp  SceneGLView.h
game-engine-qt/: CMakeLists.txt  main.cpp
game-engine-qt/include/engine/: Core.h  Objects.h
game-engine-qt/include/engine/components/: Component.h  MeshRenderer.h  Renderer.h
game-engine-qt/include/engine/core/: Asset.h  AssetManager.h  Utils.h
game-engine-qt/include/engine/editor/: EditorView.h  EventHandler.h
game-engine-qt/include/engine/game/: ContextController.h  Game.h  GameObject.h  Scene.h  SceneView.h  Transform.h
game-engine-qt/include/engine/graphics/: Camera.h  Display.h  Material.h  Mesh.h  ModelImporter.h  Shader.h  Texture.h
game-engine-qt/src/components/: Component.cpp  MeshRenderer.cpp  Renderer.cpp
game-engine-qt/src/core/: Asset.cpp  Utils.cpp
game-engine-qt/src/editor/: EditorView.cpp  EventHandler.cpp
game-engine-qt/src/game/: ContextController.cpp  Game.cpp  GameObject.cpp  Scene.cpp  SceneView.cpp  Transform.cpp
game-engine-qt/src/graphics/: Camera.cpp  Display.cpp  Material.cpp  Mesh.cpp  ModelImporter.cpp  Shader.cpp  Texture.cpp
(+4 files in other folders)
